[gd_scene load_steps=6 format=2]

[ext_resource path="res://map_renderer.tscn" type="PackedScene" id=1]
[ext_resource path="res://map_editor.gd" type="Script" id=2]
[ext_resource path="res://editor_menu.gd" type="Script" id=3]
[ext_resource path="res://set_size_dialog.gd" type="Script" id=4]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.1
bottom_radius = 0.1
height = 100.0

[node name="MapEditor" type="Spatial"]
script = ExtResource( 2 )

[node name="MapRenderer" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PosLabel" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 59.0
text = "X=0 Y =0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -2.0
margin_right = 1030.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditorMenu" type="MenuButton" parent="CanvasLayer"]
margin_right = 49.0
margin_bottom = 20.0
text = "menu"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 5, 5 )
mesh = SubResource( 1 )
material/0 = null

[node name="RayCast" type="RayCast" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 98.3332, 0 )
enabled = true
exclude_parent = false
cast_to = Vector3( 0, -1000, 0 )

[node name="SaveFileDialog" type="FileDialog" parent="."]
margin_right = 500.0
margin_bottom = 315.0
rect_min_size = Vector2( 500, 315 )
size_flags_horizontal = 3
size_flags_vertical = 3
resizable = true
current_dir = "res://maps"
current_file = "new_map.tres"
current_path = "res://maps/new_map.tres"

[node name="OpenFileDialog" type="FileDialog" parent="."]
margin_right = 500.0
margin_bottom = 315.0
rect_min_size = Vector2( 500, 315 )
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Open a File"
resizable = true
mode = 0
current_dir = "res://maps"
current_file = "new_map.tres"
current_path = "res://maps/new_map.tres"
__meta__ = {
"_editor_description_": ""
}

[node name="PropertiesDialog" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 200 )
popup_exclusive = true
window_title = "Set Size"
resizable = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PropertiesDialog"]
margin_right = 104.0
margin_bottom = 94.0
rect_min_size = Vector2( 200, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer4" type="HBoxContainer" parent="PropertiesDialog/VBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="PropertiesDialog/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 71.0
margin_bottom = 19.0
text = "Map name:"

[node name="NameEdit" type="LineEdit" parent="PropertiesDialog/VBoxContainer/HBoxContainer4"]
margin_left = 75.0
margin_right = 200.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PropertiesDialog/VBoxContainer"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 42.0
text = "Set ground size"

[node name="HBoxContainer" type="HBoxContainer" parent="PropertiesDialog/VBoxContainer"]
margin_top = 46.0
margin_right = 200.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="PropertiesDialog/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
text = "Height (meters)"

[node name="HeightLineEdit" type="LineEdit" parent="PropertiesDialog/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 162.0
margin_bottom = 24.0
text = "10"

[node name="HBoxContainer2" type="HBoxContainer" parent="PropertiesDialog/VBoxContainer"]
margin_top = 74.0
margin_right = 200.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="PropertiesDialog/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 96.0
margin_bottom = 19.0
text = "Width (meters)"

[node name="WidthLineEdit" type="LineEdit" parent="PropertiesDialog/VBoxContainer/HBoxContainer2"]
margin_left = 100.0
margin_right = 158.0
margin_bottom = 24.0
text = "10"

[node name="HBoxContainer3" type="HBoxContainer" parent="PropertiesDialog/VBoxContainer"]
margin_top = 102.0
margin_right = 200.0
margin_bottom = 122.0

[node name="SaveButton" type="Button" parent="PropertiesDialog/VBoxContainer/HBoxContainer3"]
margin_right = 41.0
margin_bottom = 20.0
text = "Save"

[node name="CancelButton" type="Button" parent="PropertiesDialog/VBoxContainer/HBoxContainer3"]
margin_left = 45.0
margin_right = 99.0
margin_bottom = 20.0
text = "Cancel"

[node name="BadHeightDialog" type="AcceptDialog" parent="PropertiesDialog"]
margin_right = 83.0
margin_bottom = 58.0
dialog_text = "The height needs to be a positive integer"

[node name="BadWidthtDialog" type="AcceptDialog" parent="PropertiesDialog"]
margin_right = 83.0
margin_bottom = 58.0
dialog_text = "The width needs to be a positive integer"
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="pressed" from="PropertiesDialog/VBoxContainer/HBoxContainer3/SaveButton" to="PropertiesDialog" method="_on_SaveButton_pressed"]
[connection signal="pressed" from="PropertiesDialog/VBoxContainer/HBoxContainer3/CancelButton" to="PropertiesDialog" method="_on_CancelButton_pressed"]
